pkg/main/default/objects/EnvelopeStatus__c/EnvelopeStatus__c.object-meta.xml
<CustomObject>
    <description>DocuSign Status</description>
    <label>DocuSign Status</label>
    <nameField>
        <displayFormat>DSX-{0000000}</displayFormat>
        <label>Envelope#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>