pkg/main/default/objects/EnvelopeStatus__c/fields/EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>EmailSubject__c</fullName>
    <label>Email Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>