pkg/main/default/objects/EnvelopeStatus__c/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <label>Expires</label>
    <type>DateTime</type>
</CustomField>