pkg/main/default/objects/EnvelopeStatus__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Declined or Voided Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>