pkg/main/default/objects/EnvelopeStatus__c/fields/SenderEmail__c.field-meta.xml
<CustomField>
    <fullName>SenderEmail__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>