pkg/main/default/objects/EnvelopeStatus__c/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <label>Sender Name</label>
    <length>56</length>
    <type>Text</type>
</CustomField>