pkg/main/default/objects/EnvelopeStatus__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <label>Sent</label>
    <type>DateTime</type>
</CustomField>