pkg/main/default/objects/EnvelopeStatus__c/fields/TimeToComplete__c.field-meta.xml
<CustomField>
    <fullName>TimeToComplete__c</fullName>
    <formula>IF(Status__c  = &quot;Voided&quot;, &quot;&quot;,  IF(Status__c  = &quot;Declined&quot;,  &quot;&quot;,   IF(Status__c  = &quot;Sent&quot;,  &quot;&quot;,
			TEXT(ROUND((Completed__c  -  Sent__c) - MOD(Completed__c  - Sent__c, 1), 0)) &amp;&quot; day(s), &quot;&amp;
			TEXT(ROUND(MOD(Completed__c - Sent__c, 1) * 24 - MOD(MOD(Completed__c - Sent__c,1) * 24, 1), 0)) &amp;&quot; hour(s), &quot;&amp;
			TEXT(ROUND(MOD(MOD(Completed__c - Sent__c, 1) * 24, 1) * 60, 0)) &amp;&quot; minute(s)&quot;)))</formula>
    <label>Time to Complete</label>
    <type>Text</type>
</CustomField>