pkg/main/default/objects/EnvelopeStatus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DocuSignId__c</columns>
    <columns>Sent__c</columns>
    <columns>Status__c</columns>
    <columns>SourceId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>