pkg/main/default/objects/EnvelopeStatus__c/listViews/AllCompleted.listView-meta.xml
<ListView>
    <fullName>AllCompleted</fullName>
    <columns>NAME</columns>
    <columns>SenderName__c</columns>
    <columns>EmailSubject__c</columns>
    <columns>Sent__c</columns>
    <columns>Completed__c</columns>
    <columns>TimeToComplete__c</columns>
    <columns>SourceId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Completed Envelopes</label>
</ListView>