pkg/main/default/objects/EnvelopeStatus__c/listViews/AllEnvelopes.listView-meta.xml
<ListView>
    <fullName>AllEnvelopes</fullName>
    <columns>NAME</columns>
    <columns>SenderName__c</columns>
    <columns>EmailSubject__c</columns>
    <columns>Status__c</columns>
    <columns>Sent__c</columns>
    <columns>Completed__c</columns>
    <columns>LastStatusUpdate__c</columns>
    <columns>TimeToComplete__c</columns>
    <columns>SourceId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Envelopes</label>
</ListView>